# teste_cromai

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  help.py  main.py  pyproject.toml
app/: __init__.py  app.py  app.sh  fib.py
tests/: test_first.py  test_program.py
