[tool.poetry]
name = "test_cromai"
version = "0.1.0"
description = ""
authors = ["Danilo Nascimento <daconnas.dcn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipdb = "^0.13.9"

[tool.poetry.dev-dependencies]
rich = "^10.14.0"
black = "^21.11b1"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.10.1"
coverage = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
